--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -1,3 +1,4 @@
+<main>
 <ng-container [ngSwitch]="layoutState | async">
   <ng-container *ngSwitchCase="0">
     <app-landing-page-layout></app-landing-page-layout>
@@ -12,3 +13,4 @@
     <app-landing-page-layout></app-landing-page-layout>
   </ng-container>
 </ng-container>
+</main>
