--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,13 +9,81 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$Shoe-Shop-primary: mat.define-palette(mat.$indigo-palette);
-$Shoe-Shop-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$md-mcgpalette0: (
+    50 : #ebefee,
+    100 : #ccd8d4,
+    200 : #aabeb7,
+    300 : #88a49a,
+    400 : #6f9185,
+    500 : #557d6f,
+    600 : #4e7567,
+    700 : #446a5c,
+    800 : #3b6052,
+    900 : #2a4d40,
+    A100 : #98ffd6,
+    A200 : #65ffc2,
+    A400 : #32ffae,
+    A700 : #19ffa4,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
 
-// The warn palette is optional (defaults to red).
+$md-mcgpalette1: (
+    50 : #f6f8f7,
+    100 : #e9edec,
+    200 : #dbe1df,
+    300 : #cdd4d2,
+    400 : #c2cbc8,
+    500 : #b7c2be,
+    600 : #b0bcb8,
+    700 : #a7b4af,
+    800 : #9faca7,
+    900 : #909f99,
+    A100 : #ffffff,
+    A200 : #ffffff,
+    A400 : #d3ffee,
+    A700 : #b9ffe5,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #000000,
+        800 : #000000,
+        900 : #000000,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+
+
+
+
+
+
+
+$Shoe-Shop-primary: mat.define-palette($md-mcgpalette0);
+$Shoe-Shop-accent: mat.define-palette($md-mcgpalette1);
 $Shoe-Shop-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
