--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -1,16 +1,21 @@
 nav{
   width: 100%;
   margin: 0;
-
+  display: flex;
 }
 
 ul{
   width: 100%;
-  display: inline-flex;
+  display: flex;
   list-style: none;
 }
 
 li{
   width: fit-content;
   margin-inline: 1rem;
+}
+
+.spacer{
+  flex: 1 1 auto;
+  width: 100%;
 }
